Changed formatting to fit on one page.

--- a/Resume_Aryeh_Spraggins.tex
+++ b/Resume_Aryeh_Spraggins.tex
@@ -89,8 +89,8 @@
 \end{itemize}}
 
 \section{Awards}
-\cvitem{April 2, 2021}{19\textsuperscript{th} FAU Annual Undergraduate Research Symposium. Presented thesis.}
-\cvitem{Mar 30, 2018}{15\textsuperscript{th} FAU Annual Undergraduate Research Symposium. Selected to present interactive art.}
+\cvitem{April 2, 2021}{FAU Annual Undergraduate Research Symposium. Presented thesis.}
+\cvitem{Mar 30, 2018}{FAU Annual Undergraduate Research Symposium. Selected to present interactive art.}
 \cvitem{May 2014}{Eagle Scout, Boy Scouts of America}
 \cvitem{Dec 2015}{Elected to the National Honor Society, JJ Pearce High School, Richardson, TX}
 \cvitem{Mar 2014}{BSA Order of the Arrow Brotherhood. Recognized for service.}
