Updated resume to include smu and grad school.

--- a/Resume_Aryeh_Spraggins.tex
+++ b/Resume_Aryeh_Spraggins.tex
@@ -51,7 +51,7 @@
 %\addresstwo{7415 Carta Valley Dr.}{Dallas, TX, 75248}%{Permanent}
 \address{7415 Carta Valley Dr.}{Dallas, TX, 75248}%{Permanent}
 \phone[mobile]{(214)~519~4678}
-\email{aspraggins2017@fau.edu}
+\email{ari.spraggins@gmail.com}
 \social[linkedin]{arispraggins}
 \social[github]{ASpraggin}
 
@@ -65,21 +65,29 @@
 \vspace{-3\baselineskip}
 
 \section{Education}
-\cventry{April 2021}{Bachelors of Science in Physics and Mathematics, Minor in Data Science}{\linebreak Florida Atlantic University, Harriet L. Wilkes Honors College}{Jupiter FL}{\linebreak Honors Thesis on data manipulation for use in fish behavioral prediction}{}  
+\cventry{Present}{Masters in Data Science}{University of Central Florida}{Orlando FL}{}{}
+\cventry{April 2021}{Bachelors of Science in Physics with Minors in Mathematics and Data Science}{\linebreak Florida Atlantic University, Harriet L. Wilkes Honors College}{Jupiter FL}{\linebreak Honors Thesis: \textit{Automatic Fish Tracking: Keeping Track of Who's Who} - A report on data manipulation for use in fish behavioral prediction}{}  
 \cventry{May 2017}{Graduate with Honors}{JJ Pearce High School}{Richardson TX}{}{}
 
-\section{Relevant Coursework}
-\cvline{}{Electricity and Magnetism, Intro to Data Science (Undergraduate and Graduate), Differential Equations, Discrete Math, Micro and Macro Economics, Intro to Set Theory, Matrix Theory, Data Visualisation, Solid Mechanics, Modern Algebra, Computational Science, Computational Social Science, Econometrics, Modern Analysis, Thermal Physics}
+%\section{Relevant Coursework}
+%\cvline{}{Electricity and Magnetism, Intro to Data Science (Undergraduate and Graduate), Differential Equations, Discrete Math, Micro and Macro Economics, Intro to Set Theory, Matrix Theory, Data Visualisation, Solid Mechanics, Modern Algebra, Computational Science, Computational Social Science, Econometrics, Modern Analysis, Thermal Physics}
 
 \section{Experience}
-\cventry{Jan 2019-- Present}{Teachers Assistant - Physics 1 and 2 Labs}{FAU Honors College}{Jupiter, Fl}{}{
+\cventry{May 2021-- Present}{Data Scientist}{Research \& Data Science Services, Office of Information Technology, Southern Methodist University}{Dallas, Tx}{Intern}{
+\begin{itemize}%
+	\item Developed scripts for cleaning large sets of scraped web data.
+	\item Performed clustering analysis to fuzzy-sort out non-viable data.
+	\item Provided data analysis support for multiple research projects.
+	\item Planned, priced out and proposed a Jetson cluster. 
+\end{itemize}}
+\cventry{Jan 2019-- April 2021}{Teaching Assistant - Physics 1 and 2 Labs}{FAU Honors College}{Jupiter, Fl}{}{
 \begin{itemize}%
 	\item Assisted with creation and implementation of organizational system for lab.
-	\item Demonstrate labs via both remote and in person learning. Assist students with experiments.
+	\item Demonstrated labs via remote and in person learning. Assisted students with experiments.
 \end{itemize}}
 \cventry{June 2019-- Aug 2019}{Assistant Teacher}{Milagro Foundation}{Boca Raton, FL}{}{
 \begin{itemize}%
-\item Taught underserved and at-risk grade 4-6 children science by performing hands on experiments.
+\item Taught underserved and at-risk grade 4-6 children science through hands on experiments.
 \item Assisted in teaching k-3 children math skills. 
 \end{itemize}}
 \cventry{June 2014-- Aug 2017}{Senior Camp Counselor, Camp Counselor}{Jewish Community Center}{Dallas, TX}{}{
@@ -92,15 +100,21 @@
 \cvitem{April 2, 2021}{FAU Annual Undergraduate Research Symposium. Presented thesis.}
 \cvitem{Mar 30, 2018}{FAU Annual Undergraduate Research Symposium. Selected to present interactive art.}
 \cvitem{May 2014}{Eagle Scout, Boy Scouts of America}
-\cvitem{Dec 2015}{Elected to the National Honor Society, JJ Pearce High School, Richardson, TX}
-\cvitem{Mar 2014}{BSA Order of the Arrow Brotherhood. Recognized for service.}
+%\cvitem{Dec 2015}{Elected to the National Honor Society, JJ Pearce High School, Richardson, TX}
+%\cvitem{Mar 2014}{BSA Order of the Arrow Brotherhood. Recognized for service.}
 
-\section{Extracurricular Activities}
-\cvitem{2017--Present}{Member, FAU Intramural Foam Sword Fighting Team (Dagorhir)}
-\cvitem{July 2017}{1\textsuperscript{st} degree black belt, Karatedo}
+%\section{Extracurricular Activities}
+%\cvitem{2017--Present}{Member, FAU Intramural Foam Sword Fighting Team (Dagorhir)}
+%\cvitem{July 2017}{1\textsuperscript{st} degree black belt, Karatedo}
 
 \section{Technical Experience}
-\cvline{languages}{Python, Markdown, Java, C, R}
-\cvline{technologies}{Vim, \LaTeX, Jupyter Notebooks}
+\cvline{languages}{Python, Markdown, R, C++}
+\cvline{technologies}{Vim, \LaTeX, Jupyter Notebooks, Numpy, Pandas, Slurm, Singularity}
+
+\section{Selected Projects and Thesis}
+\cvline{Github}{https://github.com/ASpraggin}
+\cvline{Thesis}{https://github.com/ASpraggin/FishTracking/blob/master/report/spring\%202021/report.pdf}
+
+
 \clearpage
 \end{document}
