Updated to include Grad School

--- a/Resume_Aryeh_Spraggins.tex
+++ b/Resume_Aryeh_Spraggins.tex
@@ -47,9 +47,7 @@
 
 % personal data
 \name{Aryeh}{Spraggins}
-%\address{16950 Silver Oak Circle}{Delray Beach, FL, 33445}{Current}
-%\addresstwo{7415 Carta Valley Dr.}{Dallas, TX, 75248}%{Permanent}
-\address{7415 Carta Valley Dr.}{Dallas, TX, 75248}%{Permanent}
+\address{150 RIverbridge Cir.}{Oviedo, FL, 32765}%{Permanent}
 \phone[mobile]{(214)~519~4678}
 \email{ari.spraggins@gmail.com}
 \social[linkedin]{arispraggins}
@@ -67,13 +65,18 @@
 \section{Education}
 \cventry{Present}{Masters in Data Science}{University of Central Florida}{Orlando FL}{}{}
 \cventry{April 2021}{Bachelors of Science in Physics with Minors in Mathematics and Data Science}{\linebreak Florida Atlantic University, Harriet L. Wilkes Honors College}{Jupiter FL}{\linebreak Honors Thesis: \textit{Automatic Fish Tracking: Keeping Track of Who's Who} - A report on data manipulation for use in fish behavioral prediction}{}  
-\cventry{May 2017}{Graduate with Honors}{JJ Pearce High School}{Richardson TX}{}{}
+%\cventry{May 2017}{Graduate with Honors}{JJ Pearce High School}{Richardson TX}{}{}
 
-%\section{Relevant Coursework}
-%\cvline{}{Electricity and Magnetism, Intro to Data Science (Undergraduate and Graduate), Differential Equations, Discrete Math, Micro and Macro Economics, Intro to Set Theory, Matrix Theory, Data Visualisation, Solid Mechanics, Modern Algebra, Computational Science, Computational Social Science, Econometrics, Modern Analysis, Thermal Physics}
+\section{Relevant Expertise}
+%\cvline{}{Electricity and Magnetism, Data Science (Undergraduate and Graduate), Differential Equations, Discrete Math, Micro and Macro Economics, Set Theory, Matrix Theory, Data Visualisation, Solid Mechanics, Algebraic Principles, Computational Science, Computational Social Science, Econometrics, Big Data Analytics, Thermal Physics, Machine Learning, Data Visualizations, Data Modeling, Data Engineering}
+\cvline{}{Algebraic Principles, Big Data Analytics, Computational Science, Computational Social Science, Data Modeling, Data Engineering  Data Science, Data Visualisation, Set Theory, Matrix Theory, Machine Learning,}
 
 \section{Experience}
-\cventry{May 2021-- Present}{Data Scientist}{Research \& Data Science Services, Office of Information Technology, Southern Methodist University}{Dallas, Tx}{Intern}{
+\cventry{June 2021-- Present}{Leasing Agent}{Riverwind at Alafaya Trail}{Oviedo, Fl}{Leasing Agent}{
+\begin{itemize}%
+	\item Project management, crisis mitigation, stakeholder communications
+\end{itemize}}
+\cventry{May 2021-- Aug 2021}{Data Scientist}{Research \& Data Science Services, Office of Information Technology, Southern Methodist University}{Dallas, Tx}{Intern}{
 \begin{itemize}%
 	\item Developed scripts for cleaning large sets of scraped web data.
 	\item Performed clustering analysis to fuzzy-sort out non-viable data.
@@ -90,15 +93,15 @@
 \item Taught underserved and at-risk grade 4-6 children science through hands on experiments.
 \item Assisted in teaching k-3 children math skills. 
 \end{itemize}}
-\cventry{June 2014-- Aug 2017}{Senior Camp Counselor, Camp Counselor}{Jewish Community Center}{Dallas, TX}{}{
-\begin{itemize}%
-\item Oversaw fellow counselors in planning and leading activities for children.
-\item Mentored elementary age children in safe and engaging activities such as crafts, sports, swimming, and song.
-\end{itemize}}
+%\cventry{June 2014-- Aug 2017}{Senior Camp Counselor, Camp Counselor}{Jewish Community Center}{Dallas, TX}{}{
+%\begin{itemize}%
+%\item Oversaw fellow counselors in planning and leading activities for children.
+%\item Mentored elementary age children in safe and engaging activities such as crafts, sports, swimming, and song.
+%\end{itemize}}
 
 \section{Awards}
 \cvitem{April 2, 2021}{FAU Annual Undergraduate Research Symposium. Presented thesis.}
-\cvitem{Mar 30, 2018}{FAU Annual Undergraduate Research Symposium. Selected to present interactive art.}
+%\cvitem{Mar 30, 2018}{FAU Annual Undergraduate Research Symposium. Selected to present interactive art.}
 \cvitem{May 2014}{Eagle Scout, Boy Scouts of America}
 %\cvitem{Dec 2015}{Elected to the National Honor Society, JJ Pearce High School, Richardson, TX}
 %\cvitem{Mar 2014}{BSA Order of the Arrow Brotherhood. Recognized for service.}
@@ -108,12 +111,14 @@
 %\cvitem{July 2017}{1\textsuperscript{st} degree black belt, Karatedo}
 
 \section{Technical Experience}
-\cvline{languages}{Python, Markdown, R, C++}
-\cvline{technologies}{Vim, \LaTeX, Jupyter Notebooks, Numpy, Pandas, Slurm, Singularity}
+\cvline{Languages}{Python, Markdown, R, C++, SQL, SAS, Julia, Java}
+\cvline{Technologies}{Vim, \LaTeX, Jupyter, Numpy, Pandas, Slurm, Singularity}
+\cvline{Analytics Platforms}{Apache Spark, ArcGIS, Tablou, Azure, Aws, PowerBi, git, excel, SQL Server, SAS institute, google analytics, databricks, Oracle}
 
 \section{Selected Projects and Thesis}
-\cvline{Github}{https://github.com/ASpraggin}
-\cvline{Thesis}{https://github.com/ASpraggin/FishTracking/blob/master/report/spring\%202021/report.pdf}
+\cvline{Github}{github.com/ASpraggin??? }
+\cvline{Thesis}{github.com/ASpraggin/FishTracking/blob/master/report/spring\%202021/report.pdf}
+\cvline{Thesis}{http://purl.flvc.org/fau/fd/FAUHT00162}
 
 
 \clearpage
