Updates for contract work.

--- a/Resume_Aryeh_Spraggins.tex
+++ b/Resume_Aryeh_Spraggins.tex
@@ -63,7 +63,7 @@
 \vspace{-3\baselineskip}
 
 \section{Education}
-\cventry{Present}{Masters in Data Science}{University of Central Florida}{Orlando FL}{}{}
+\cventry{Aug 2021 -- Apr 2024}{Select Masters level classes in Data Science}{University of Central Florida}{Orlando FL}{}{}
 \cventry{April 2021}{Bachelors of Science in Physics with Minors in Mathematics and Data Science}{\linebreak Florida Atlantic University, Harriet L. Wilkes Honors College}{Jupiter FL}{\linebreak Honors Thesis: \textit{Automatic Fish Tracking: Keeping Track of Who's Who} - A report on data manipulation for use in fish behavioral prediction}{}  
 %\cventry{May 2017}{Graduate with Honors}{JJ Pearce High School}{Richardson TX}{}{}
 
@@ -72,27 +72,36 @@
 \cvline{}{Algebraic Principles, Big Data Analytics, Computational Science, Computational Social Science, Data Modeling, Data Engineering  Data Science, Data Visualisation, Set Theory, Matrix Theory, Machine Learning,}
 
 \section{Experience}
-\cventry{June 2021-- Present}{Leasing Agent}{Riverwind at Alafaya Trail}{Oviedo, Fl}{Leasing Agent}{
+\cventry{Sep 2022 -- Present}{Data Science Contractor}{Self Employed}{}{}{
 \begin{itemize}%
-	\item Project management, crisis mitigation, stakeholder communications
+	\item Wrote code to speciation.
+	\item Performed dataset analysis on client datasets.
+	\item Implemented algorithms to answer client questions.
 \end{itemize}}
-\cventry{May 2021-- Aug 2021}{Data Scientist}{Research \& Data Science Services, Office of Information Technology, Southern Methodist University}{Dallas, Tx}{Intern}{
+
+\cventry{June 2021 -- Aug 2022}{Leasing Agent}{Riverwind at Alafaya Trail}{Oviedo, Fl}{Leasing Agent}{
+\begin{itemize}%
+	\item Project management.
+	\item Crisis mitigation.
+	\item Stakeholder communications
+\end{itemize}}
+\cventry{May 2021 -- Aug 2021}{Data Scientist}{Research \& Data Science Services, Office of Information Technology, Southern Methodist University}{Dallas, Tx}{Intern}{
 \begin{itemize}%
 	\item Developed scripts for cleaning large sets of scraped web data.
 	\item Performed clustering analysis to fuzzy-sort out non-viable data.
 	\item Provided data analysis support for multiple research projects.
 	\item Planned, priced out and proposed a Jetson cluster. 
 \end{itemize}}
-\cventry{Jan 2019-- April 2021}{Teaching Assistant - Physics 1 and 2 Labs}{FAU Honors College}{Jupiter, Fl}{}{
-\begin{itemize}%
-	\item Assisted with creation and implementation of organizational system for lab.
-	\item Demonstrated labs via remote and in person learning. Assisted students with experiments.
-\end{itemize}}
-\cventry{June 2019-- Aug 2019}{Assistant Teacher}{Milagro Foundation}{Boca Raton, FL}{}{
-\begin{itemize}%
-\item Taught underserved and at-risk grade 4-6 children science through hands on experiments.
-\item Assisted in teaching k-3 children math skills. 
-\end{itemize}}
+%\cventry{Jan 2019-- April 2021}{Teaching Assistant - Physics 1 and 2 Labs}{FAU Honors College}{Jupiter, Fl}{}{
+%\begin{itemize}%
+%	\item Assisted with creation and implementation of organizational system for lab.
+%	\item Demonstrated labs via remote and in person learning. Assisted students with experiments.
+%\end{itemize}}
+%\cventry{June 2019-- Aug 2019}{Assistant Teacher}{Milagro Foundation}{Boca Raton, FL}{}{
+%\begin{itemize}%
+%\item Taught underserved and at-risk grade 4-6 children science through hands on experiments.
+%\item Assisted in teaching k-3 children math skills. 
+%\end{itemize}}
 %\cventry{June 2014-- Aug 2017}{Senior Camp Counselor, Camp Counselor}{Jewish Community Center}{Dallas, TX}{}{
 %\begin{itemize}%
 %\item Oversaw fellow counselors in planning and leading activities for children.
@@ -116,7 +125,7 @@
 \cvline{Analytics Platforms}{Apache Spark, ArcGIS, Tablou, Azure, Aws, PowerBi, git, excel, SQL Server, SAS institute, google analytics, databricks, Oracle}
 
 \section{Selected Projects and Thesis}
-\cvline{Github}{github.com/ASpraggin??? }
+\cvline{Github}{github.com/ASpraggin}
 \cvline{Thesis}{github.com/ASpraggin/FishTracking/blob/master/report/spring\%202021/report.pdf}
 \cvline{Thesis}{http://purl.flvc.org/fau/fd/FAUHT00162}
 
