Updated master with information from leasing.

--- a/master/Resume_Aryeh_Spraggins_master.tex
+++ b/master/Resume_Aryeh_Spraggins_master.tex
@@ -65,6 +65,7 @@
 \section{Education}
 \cventry{Aug 2021 -- Apr 2024}{Select Masters level classes in Data Science}{University of Central Florida}{Orlando FL}{}{}
 \cventry{April 2021}{Bachelors of Science in Physics with Minors in Mathematics and Data Science}{\linebreak Florida Atlantic University, Honors College}{Jupiter FL}{\linebreak Honors Thesis: Data manipulation for use in fish behavioral prediction}{}  
+\cventry{April 2021}{Bachelors of Science in Physics}{Florida Atlantic University}{Jupiter FL}{}{}
 \cventry{May 2017}{Graduate with Honors}{JJ Pearce High School}{Richardson TX}{}{}
 
 \section{Relevant Expertise}
@@ -84,6 +85,9 @@
 	\item Project management.
 	\item Incident triage and mitigation.
 	\item Customer advocate in communication with management.
+	\item Acted as first point of contact for potential residents.
+        \item Kept and organised files relating to both residents and ongoing tasks.
+
 \end{itemize}}
 \cventry{May 2021 -- Aug 2021}{Data Scientist}{Research \& Data Science Services, Office of Information Technology, Southern Methodist University}{Dallas, Tx}{Intern}{
 \begin{itemize}%
@@ -124,6 +128,8 @@
 \cvline{Technologies}{Vim, \LaTeX, Jupyter, Numpy, Pandas, Linux, Office, Slurm, Singularity}
 \cvline{Analytics}{Apache Spark, Tablou, Azure, Aws, PowerBi, git, Excel, SQL Server, Databricks, Oracle}
 \cvline{Office}{Word, Powerpoint, Excel, Onlyoffice and Google equivalents}
+\cvline{Soft Skills}{Customer Management, Communication, Organisation}
+\cvline{Other Softwares}{Onesite}
 
 \section{Selected Projects and Thesis}
 \cvline{Website}{aspraggin.github.io}
